--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,20 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<!DOCTYPE html>
+<html>
 
-    <title>DevOps</title>
-    
+<head>
+        <title> Mylab1 </title>
+		<meta charset="UTF-8" />
 </head>
 <body>
-    <a>Shilo Aleksandr</a>
-    <b>Alfa</b>
+        <body style=text-align:center;background-color:LightCyan;font-weight:900;font-size:20px;font-family:Helvetica,Candara,sans-serif>
+        <img src="https://www.docker.com/wp-content/uploads/2022/03/Moby-logo.png">
+        <h1> Шило Олександр Сегійович </h1>
+        <h1> ІА-з21мп </h1>
+        
+        
+<script>
+        var date = new Date();
+        document.getElementById("date").innerHTML=date.toLocaleString();
+</script>
 </body>
-
-
-
 </html>
