--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <body style=text-align:center;background-color:LightCyan;font-weight:900;font-size:20px;font-family:Helvetica,Candara,sans-serif>
         <img src="https://www.docker.com/wp-content/uploads/2022/03/Moby-logo.png">
         <h1> Шило Олександр Сегійович </h1>
-        <h1> ІА-з21мп </h1>
+        <h1> ІА-з21мп іспит </h1>
         
         
 <script>
